--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 </div>
 
-<div class="footer">Powered by ---・---</div>
+<div class="footer"> </div>
 
 <script>
   function updateClock() {
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
