--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>时间与进度条界面（实时版）</title>
 <style>
   body {
-    background-color: #1a1a1a;
+    background-color: transparent;
     color: #00d8ff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
@@ -151,5 +151,6 @@
 
 </body>
 </html>
+
 
 
